--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: busybox:1.32.0-glibc
+image: curlimages/curl:7.73.0
 
 variables:
    NAME: "abdessamad"
@@ -7,4 +7,4 @@ run:
   script:
     - echo "hello $NAME"
   after_script:
-    - curl 
+    - curl '"https://api.github.com/repos/leadab/hello-world/statuses/$GIT_COMMIT?access_token=9fd09f3d42a262066a5aeb92b9ff76ea92c5b7c8" -H "Content-Type: application/json" -X POST -d "{\"state\": \"pending\", \"description\": \"this still pending\", \"context\": \"Gitlab-ci\", \"target_url\": \"https://www.google.com\"}"'
