--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,5 +7,8 @@ variables:
 run:
   script:
     - echo "hello $NAME"
+    - echo "this is SHA $CI_COMMIT_SHA"
+    
   after_script:
+    - echo "the status of the job was $CI_JOB_STATUS"
     - curl '"https://api.github.com/repos/leadab/hello-world/statuses/&CI_COMMIT_SHA?access_token=9fd09f3d42a262066a5aeb92b9ff76ea92c5b7c8" -H "Content-Type:application/json" -X POST -d "{\"state\":\"&CI_JOB_STATUS\",\"description\":\"this still pending\",\"context\":\"Gitlab-ci\",\"target_url\":\"https://www.google.com\"}"'
