--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,8 @@ image: curlimages/curl:7.73.0
 
 variables:
     NAME: "abdessamad"
+    CURL_CMD: ""https://api.github.com/repos/leadab/hello-world/statuses/$GIT_COMMIT?access_token=9fd09f3d42a262066a5aeb92b9ff76ea92c5b7c8""
+    CURL_REST: " -H "Content-Type: application/json" -X POST -d "{\"state\": \"pending\", \"description\": \"this still pending\", \"context\": \"Gitlab-ci\", \"target_url\": \"https://www.google.com\"}""
 
 
 run:
@@ -11,4 +13,4 @@ run:
     
   after_script:
     - echo "the status of the job was $CI_JOB_STATUS"
-    - curl '"https://api.github.com/repos/leadab/hello-world/statuses/&CI_COMMIT_SHA?access_token=9fd09f3d42a262066a5aeb92b9ff76ea92c5b7c8" -H "Content-Type:application/json" -X POST -d "{\"state\":\"&CI_JOB_STATUS\",\"description\":\"this still pending\",\"context\":\"Gitlab-ci\",\"target_url\":\"https://www.google.com\"}"'
+    - curl "https://api.github.com/repos/leadab/hello-world/statuses/&CI_COMMIT_SHA?access_token=9fd09f3d42a262066a5aeb92b9ff76ea92c5b7c8" -H "Content-Type:application/json" -X POST -d "{\"state\":\"&CI_JOB_STATUS\",\"description\":\"this still pending\",\"context\":\"Gitlab-ci\",\"target_url\":\"https://www.google.com\"}"
