--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: curlimages/curl:7.73.0
 
 variables:
     NAME: "abdessamad"
-    token: "68d15c84b176a9c0fb68cc54b446d1db507ad77b"
+    token: "fa8900d80b4a0b3141dbd19bfa50783571bdcd91"
    
 
 run:
@@ -16,5 +16,5 @@ run:
         curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
         -H "Content-Type: application/json" 
         -X POST 
-        -d "{\"state\": \"success\", \"description\": \"ok ok ok ok\"}"
+        -d "{\"state\": \"success\", \"description\": \"new creds\"}"
     
