--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,11 @@ image: img:v10
 
 variables:
     NAME: "abdessamad"
+    STATE: >
+        curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
+        -H "Content-Type: application/json" 
+        -X POST 
+        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab\", \"target_url\": \"$CI_JOB_URL\" }"
    
 
 run:
@@ -10,5 +15,5 @@ run:
     - echo "this is SHA $CI_COMMIT_SHA"
     
   after_script:
-    - ./status.sh $CI_COMMIT_SHA $token $CI_JOB_STATUS $CI_JOB_NAME $CI_JOB_URL
+    - $STATE
     
