update pipeline with variables

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,19 +17,7 @@ compile_code:
         -H "Content-Type: application/json" 
         -X POST 
         -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab\", \"target_url\": \"$CI_JOB_URL\" }"
-        
-analyse_code:
-  stage: analyse
-  script:
-    - echo "this is an analyse stage"
-    
-  after_script:
-    - >
-        curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
-        -H "Content-Type: application/json" 
-        -X POST 
-        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab\", \"target_url\": \"$CI_JOB_URL\" }"
-        
+           
 test_code:
   stage: test
   script:
@@ -40,17 +28,5 @@ test_code:
         curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
         -H "Content-Type: application/json" 
         -X POST 
-        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab\", \"target_url\": \"$CI_JOB_URL\" }"
+        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab-ci\", \"target_url\": \"$CI_JOB_URL\" }"
         
-deploy_to_production:
-  stage: deploy
-  script:
-    - echo "this is a deploy stage"
-    
-  after_script:
-    - >
-        curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
-        -H "Content-Type: application/json" 
-        -X POST 
-        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab\", \"target_url\": \"$CI_JOB_URL\" }"
-    
