--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,3 +30,13 @@ test_code:
         -X POST 
         -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab-ci\", \"target_url\": \"$CI_JOB_URL\" }"
         
+send_status:
+  stage: status
+  when: on_failure
+  script:
+    - >
+        curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
+        -H "Content-Type: application/json" 
+        -X POST 
+        -d "{\"state\": \"failure\", \"description\": \"The Pipeline's status is failed\", \"context\": \"Gitlab-ci\", \"target_url\": \"$CI_JOB_URL\" }" 
+ 
