--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,5 +40,5 @@ send_status:
         curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
         -H "Content-Type: application/json" 
         -X POST 
-        -d "{\"state\": \"failure\", \"description\": \"The Pipeline's status is failed\", \"context\": \"Gitlab-ci\", \"target_url\": \"$CI_JOB_URL\" }" 
+        -d "{\"state\": \"failure\", \"description\": \"The Pipeline's status is failed\", \"context\": \"Gitlab-final\", \"target_url\": \"$CI_JOB_URL\" }" 
  
