--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,10 +14,10 @@ compile_code:
     
   after_script:
     - >
-        curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
+        curl -H 'Authorization: token $token' https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA 
         -H "Content-Type: application/json" 
         -X POST 
-        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab\", \"target_url\": \"$CI_JOB_URL\" }"
+        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab-$CI_JOB_STAGE\", \"target_url\": \"$CI_JOB_URL\" }"
            
 test_code:
   stage: test
@@ -26,10 +26,10 @@ test_code:
     
   after_script:
     - >
-        curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
+        curl -H 'Authorization: token $token' https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA 
         -H "Content-Type: application/json" 
         -X POST 
-        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab-ci\", \"target_url\": \"$CI_JOB_URL\" }"
+        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab-$CI_JOB_STAGE\", \"target_url\": \"$CI_JOB_URL\" }"
         
 send_status:
   stage: status
@@ -37,7 +37,8 @@ send_status:
   allow_failure: true
   script:
     - >
-        curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
+        curl -H 'Authorization: token $token' https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA
+         
         -H "Content-Type: application/json" 
         -X POST 
         -d "{\"state\": \"failure\", \"description\": \"The Pipeline's status is failed\", \"context\": \"Gitlab-final\", \"target_url\": \"$CI_JOB_URL\" }" 
