--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,10 @@
 image: curlimages/curl:7.73.0
-
+variables:
+   var_stat: " curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
+        -H "Content-Type: application/json" 
+        -X POST 
+        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab-$CI_JOB_STAGE\", \"target_url\": \"$CI_JOB_URL\" }"
+        "
 stages:
   - compile
   - analyse
@@ -15,7 +20,7 @@ compile_code:
     - echo $status_var
   after_script:
     - >
-        $status_var
+        $var_stat
 
     
 test_code:
