--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,8 @@
 image: curlimages/curl:7.73.0
 variables:
-   var_stat: " curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
-        -H "Content-Type: application/json" 
-        -X POST 
-        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab-$CI_JOB_STAGE\", \"target_url\": \"$CI_JOB_URL\" }"
-        "
+   var_link: "curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token""
+   var_content: "Content-Type: application/json" 
+       
 stages:
   - compile
   - analyse
@@ -20,18 +18,20 @@ compile_code:
     - echo $status_var
   after_script:
     - >
-        $var_stat
-
-    
+        curl "&var_link" 
+        -H "&var_content" 
+        -X POST 
+        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab-$CI_JOB_STAGE\", \"target_url\": \"$CI_JOB_URL\" }"
+          
 test_code:
   stage: test
   script:
-    - echoo "this is a test stage"
+    - echo "this is a test stage"
     
   after_script:
     - >
-        curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
-        -H "Content-Type: application/json" 
+        curl "&var_link" 
+        -H "&var_content" 
         -X POST 
         -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab-$CI_JOB_STAGE\", \"target_url\": \"$CI_JOB_URL\" }"
         
@@ -41,8 +41,8 @@ send_status:
   allow_failure: true
   script:
     - >
-        curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token"         
-        -H "Content-Type: application/json" 
+        curl "&var_link" 
+        -H "&var_content"
         -X POST 
         -d "{\"state\": \"failure\", \"description\": \"The Pipeline's status is failed\", \"context\": \"Gitlab-final\", \"target_url\": \"$CI_JOB_URL\" }" 
  
