--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,7 @@
 image: curlimages/curl:7.73.0
 variables:
    var_link: curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token"
-   var_content: "Content-Type: application/json" 
-       
+   
 stages:
   - compile
   - analyse
@@ -19,10 +18,10 @@ compile_code:
   after_script:
     - >
         curl &var_link 
-        -H &var_content 
+        -H "Content-Type: application/json"  
         -X POST 
-        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab-$CI_JOB_STAGE\", \"target_url\": \"$CI_JOB_URL\" }"
-          
+        -d $status_var
+        
 test_code:
   stage: test
   script:
@@ -31,7 +30,7 @@ test_code:
   after_script:
     - >
         curl "&var_link" 
-        -H "&var_content" 
+        -H "Content-Type: application/json"  
         -X POST 
         -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab-$CI_JOB_STAGE\", \"target_url\": \"$CI_JOB_URL\" }"
         
@@ -42,6 +41,6 @@ send_status:
   script:
     - >
         curl "&var_link" 
-        -H "&var_content"
+        -H "Content-Type: application/json" 
         -X POST 
         -d "{\"state\": \"failure\", \"description\": \"The Pipeline's status is failed\", \"context\": \"Gitlab-final\", \"target_url\": \"$CI_JOB_URL\" }" 
