--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 image: curlimages/curl:7.73.0
 variables:
-   var_link: curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token"
+   var_link: "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token"
    
 stages:
   - compile
@@ -29,7 +29,7 @@ test_code:
     
   after_script:
     - >
-        curl "&var_link" 
+        curl &var_link 
         -H "Content-Type: application/json"  
         -X POST 
         -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab-$CI_JOB_STAGE\", \"target_url\": \"$CI_JOB_URL\" }"
@@ -40,7 +40,7 @@ send_status:
   allow_failure: true
   script:
     - >
-        curl "&var_link" 
+        curl &var_link 
         -H "Content-Type: application/json" 
         -X POST 
         -d "{\"state\": \"failure\", \"description\": \"The Pipeline's status is failed\", \"context\": \"Gitlab-final\", \"target_url\": \"$CI_JOB_URL\" }" 
