--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,17 +2,14 @@ image: curlimages/curl:7.73.0
    
 stages:
   - compile
-  - analyse
   - test
   - deploy
   - status
-  - final
 
 compile_code:
   stage: compile
   script:
-    - echo "this is a build stage"
-    - echo $status_var
+    - echo "this is a &CI_JOB_STAGE stage"
   after_script:
     - >
         curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
@@ -23,7 +20,19 @@ compile_code:
 test_code:
   stage: test
   script:
-    - echo "this is a test stage"
+    - echo "this is a &CI_JOB_STAGE stage"
+    
+  after_script:
+    - >
+        curl "https://api.github.com/repos/leadab/hello-world/statuses/$CI_COMMIT_SHA?access_token=$token" 
+        -H "Content-Type: application/json"  
+        -X POST 
+        -d "{\"state\": \"$CI_JOB_STATUS\", \"description\": \"The job $CI_JOB_NAME status is: $CI_JOB_STATUS\", \"context\": \"Gitlab-$CI_JOB_STAGE\", \"target_url\": \"$CI_JOB_URL\" }"
+        
+deploy_code:
+  stage: deploy
+  script:
+    - echo "this is a &CI_JOB_STAGE stage"
     
   after_script:
     - >
